tdf#103068: make sure to update and use current MySQL connection type

1. Don't set selection in OGeneralPageWizard::getEmbeddedDBName. The
method should only provide a name of an embedded database - either in
the passed set, or the default one; the activation of controls and
related actions will be done in the calling implInitControls. This
makes sure, that ODbTypeWizDialogSetup::m_sURL doesn't get rewritten
unnecessarily, keeping the current preference intact.

2. In ODbTypeWizDialogSetup::activateDatabasePath, do not use the
hardcoded MySQL URL from the control, if the current value of m_sURL
is already a MySQL one. This allows to keep the selected kind intact.

3. In OMySQLIntroPageSetup::implInitControls, do not assume that the
existing selection means that there's nothing to do. The page keeps
the selection, even when the wizard's active path was changed; and
so, the wizard's idea which page to show next may differ from the
selection. Just make sure to update the setup mode.

Change-Id: Iad98d54a615dccc58b2852a1c0d8aefad6b0b898
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164987
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 1e66905c840dbee0a67e444fca80bdacfcb6e6b2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165000
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>